fix overflow in topic picker

--- a/src/TopicPicker/topic-picker.less
+++ b/src/TopicPicker/topic-picker.less
@@ -2,8 +2,10 @@
 
 .topic-picker {
   width: 100%;
+  max-width: 510px;
   padding-left: 1em;
   align-items: flex-start;
+  overflow-x: scroll;
   border: 1px mix(@gray25, @gray50, 70%) solid;
   box-shadow: inset 0 3px 7px @gray15;
   border-radius: 3px;
@@ -64,7 +66,7 @@
 
   input.topic-form-input {
     max-width: none;
-    min-width: 0;
+    min-width: 200px;
     flex-shrink: 1;
     width: 100%;
     margin-bottom: 0;
@@ -81,7 +83,6 @@
 }
 
 .topic-suggestion-list {
-  overflow: visible;
   position: absolute;
   top: 45px;
   left: 1em;
